Treak to make rtmath build debug_subversion.h properly.
git-svn-id: file:///mnt/svn/rtmath@435 1d52797c-35fc-48e8-8e80-2db72aa187e2

--- a/rtmath/rtmath/rtmath.vcxproj
+++ b/rtmath/rtmath/rtmath.vcxproj
@@ -54,7 +54,7 @@
       <GenerateDebugInformation>true</GenerateDebugInformation>
     </Link>
     <PreBuildEvent>
-      <Command>prebuild.bat "$(SolutionDir)$(ProjectName)\src"</Command>
+      <Command>prebuild.bat "$(ProjectDir)src"</Command>
     </PreBuildEvent>
     <PreBuildEvent>
       <Message>Generate Subversion Information Header</Message>
@@ -76,7 +76,7 @@
       <OptimizeReferences>true</OptimizeReferences>
     </Link>
     <PreBuildEvent>
-      <Command>prebuild.bat "$(SolutionDir)$(ProjectName)\src"</Command>
+      <Command>prebuild.bat "$(ProjectDir)src"</Command>
     </PreBuildEvent>
     <PreBuildEvent>
       <Message>Generate Subversion Information Header</Message>
