git-svn-id: file:///mnt/svn/rtmath@444 1d52797c-35fc-48e8-8e80-2db72aa187e2

--- a/rtmath/rtmath/CMakeLists.txt
+++ b/rtmath/rtmath/CMakeLists.txt
@@ -5,7 +5,8 @@
 aux_source_directory (src libsrcs)
 
 # Find ROOT directories and files
-include(../FindROOT.cmake)
+#include(../FindROOT.cmake)
+include (../CMakeRules/common.cmake)
 
 # Options
 option ( USE_IPP_MATRIXOP
