Update rtmath debug_subversion.h build location.
git-svn-id: file:///mnt/svn/rtmath@446 1d52797c-35fc-48e8-8e80-2db72aa187e2

--- a/rtmath/rtmath/CMakeLists.txt
+++ b/rtmath/rtmath/CMakeLists.txt
@@ -18,28 +18,27 @@ option ( USE_OPENMP
 
 IF(${UNIX})
 	add_custom_command (
-		COMMAND tcsh ./prebuild.csh "${PROJECT_BINARY_DIR}"
-		#${PROJECT_BINARY_DIR}
-		OUTPUT ${PROJECT_BINARY_DIR}/debug_subversion.h
+		COMMAND tcsh ./prebuild.csh "${CMAKE_CURRENT_BINARY_DIR}"
+		OUTPUT ${CMAKE_CURRENT_BINARY_DIR}/debug_subversion.h
 		WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
 	)
 ENDIF(${UNIX})
 IF(${WIN32})
 	add_custom_command (
-		COMMAND prebuild.bat "${PROJECT_BINARY_DIR}"
+		COMMAND prebuild.bat "${CMAKE_CURRENT_BINARY_DIR}"
 		COMMENT Running custom commands to set paths and query the repository information.
-		OUTPUT ${PROJECT_BINARY_DIR}/debug_subversion.h
+		OUTPUT ${CMAKE_CURRENT_BINARY_DIR}/debug_subversion.h
 		WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
 	)
 ENDIF(${WIN32})
 
 # Add in script-generated includes
-include_directories("${PROJECT_BINARY_DIR}")
+include_directories("${CMAKE_CURRENT_BINARY_DIR}")
 
 
-add_library (rtmath SHARED ${libsrcs} ${PROJECT_BINARY_DIR}/debug_subversion.h)
+add_library (rtmath SHARED ${libsrcs} ${CMAKE_CURRENT_BINARY_DIR}/debug_subversion.h)
 
-add_library (rtmath-static STATIC ${libsrcs} ${PROJECT_BINARY_DIR}/debug_subversion.h)
+add_library (rtmath-static STATIC ${libsrcs} ${CMAKE_CURRENT_BINARY_DIR}/debug_subversion.h)
 
 aux_source_directory (tests modtests)
 add_executable (rtmath-tests ${modtests})
